cm4all-beng-proxy (0.3.4) unstable; urgency=low

  * processor: added support for custom widget request headers

 --

cm4all-beng-proxy (0.3.3) unstable; urgency=low

  * processor: grew widget parameter buffer to 512 bytes
  * widget-resolver: clear widget->resolver on abort
  * cgi: clear the input's handler in cgi_async_abort()
  * widget-stream: use istream_hold (reverts r4171)

 -- Max Kellermann <mk@cm4all.com>  Fri, 05 Dec 2008 14:43:05 +0100

cm4all-beng-proxy (0.3.2) unstable; urgency=low

  * processor: free memory before calling embed_frame_widget()
  * processor: allocate query string from the widget pool
  * processor: removed the obsolete widget attributes "tag" and "style"
  * parser: hold a reference to the pool

 -- Max Kellermann <mk@cm4all.com>  Mon, 01 Dec 2008 14:15:38 +0100

cm4all-beng-proxy (0.3.1) unstable; urgency=low

  * http-client: remove Transfer-Encoding and Content-Length from response
    headers
  * http-client: don't read body after invoke_response()
  * fork: retry splice() after EAGAIN
  * fork: don't close input when splice() fails
  * cgi: abort the response handler when the stdin stream fails
  * istream_file, istream_pipe, fork, client_socket, listener: fixed file
    descriptor leaks
  * processor: hold a reference to the caller's pool
  * debian/rules: enabled test suite

 -- Max Kellermann <mk@cm4all.com>  Thu, 27 Nov 2008 16:01:16 +0100

cm4all-beng-proxy (0.3) unstable; urgency=low

  * implemented widget filters
  * translate: initialize all fields of a CGI address
  * fork: read request body on EAGAIN
  * fork: implemented the direct() method with splice()
  * python: added class Response
  * prototypes/translate.py:
    - support "filter"
    - support "content_type"
  * demo: added widget filter demo

 -- Max Kellermann <mk@cm4all.com>  Wed, 26 Nov 2008 16:27:29 +0100

cm4all-beng-proxy (0.2) unstable; urgency=low

  * don't quote text/xml widgets
  * widget-resolver: pass widget_pool to widget_class_lookup()