@@ -1,6 +1,7 @@
 cm4all-beng-proxy (0.3.4) unstable; urgency=low
 
   * processor: added support for custom widget request headers
+  * http-cache: obey the "Vary" response header
 
  --
 
